Added an addStudent form, took out the Update_Cell function, and added addNewBtn_clicked function.

--- a/ClassNotificationSystem/ClassNotificationSystem.csproj
+++ b/ClassNotificationSystem/ClassNotificationSystem.csproj
@@ -65,6 +65,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="addStudent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="addStudent.Designer.cs">
+      <DependentUpon>addStudent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Homepage.cs">
       <SubType>Form</SubType>
     </Compile>
